[project]
name = "token-counter"
version = "0.1.0"
description = "A script to count tokens in various file formats using OpenAI Tiktoken and HuggingFace Transformers"
dependencies = [
    "tiktoken>=0.7.0",
    "transformers>=4.20.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "click>=8.1.0",
]

[project.scripts]
token-count = "token_counter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"